test/Fail/Issue3553.err
Issue3553.agda:23.8-18: error: [GenericDocError]
The value of f is x₀
when checking that the expression unquote (getValue (quote f)) has
type _19
